# portfolio

./: .babelrc  .browserslistrc  .env.example  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  .prettierrc.cjs  .prettierrc.js  .prettierrc.json  Cargo.toml  README.md  astro.config.mjs  bun.lockb  ci.sh  cypress.config.ts  eslint.config.mjs  getContentfulEnvironment.js  getContentfulEnvironment.ts  next.config.js  next.config.mjs  next.config.ts  nuxt.config.js  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  portfolio.7z  postcss.config.js  postcss.config.mjs  renovate.json  rust-toolchain.toml  svelte-image-0.2.9.tgz  svelte.config.js  tailwind.config.cjs  (+4 more)
.github/: dependabot.yml
.svelte-kit/: ambient.d.ts
app/: Header.module.scss  Header.tsx  globals.scss  head.tsx  layout.module.scss  layout.tsx  links.ts  page.module.scss  page.tsx
astro-move/: package.json
components/: GithubStats.vue  GlobalHeader.vue  Header.vue  LinkDisplay.vue  Page.tsx  ProfilePicture.vue  WithDefaultGlobalStyles.tsx
config/: eslint.config.ts  index.d.ts  index.js  next.config.ts  prettier.config.ts
icopng/: .gitignore  Cargo.toml  LICENSE_MIT  README.md  package.json
icopng-old/: Cargo.toml  package.json
icopng/src/: lib.rs
icopng/types/: index.d.ts
layouts/: default.vue
messages/: en-US.json  en.json
next-old/: tsconfig.json
old-astro/: .gitignore  astro.preview.config.mjs  package.json  postcss.config.js
pages/: index.vue
portfolio/: .eslintrc.cjs  bun.lockb  package.json
project.inlang/: project_id  settings.json
public/: about.txt  robots.txt  site.webmanifest
scripts/: deploy.js  generateClasses.ts  generateProjectNames.ts  unpinDeps.ts
scss/: global.scss  palette.scss
src/: app.css  app.d.ts  app.html  arch.ts  consts.ts  conversions.ts  env.d.ts  flags.ts  globals.d.ts  links.ts  mdx-components.tsx  middleware.ts  theme.ts
stars/: Cargo.toml  package.json
stars/src/: lib.rs  log.rs  logger.rs  stars.rs  stopper.rs  utils.rs
static/: site.webmanifest
(+374 files in other folders)
