[package]
name = "icopng"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
reqwest = { version = "0.11.13", features = ["blocking"] }
avgcol = { git = "https://github.com/jewlexx/avgcol.git", version = "0.2.0", features = ["remote_image"] }
smol = "1.3.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
