[package]
name = "stars"
version = "0.1.0"
authors = ["Juliette Cordor <juliette@jewelexx.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
] }

wasm-bindgen = "0.2.87"
rand = "0.8.5"
log = "0.4.20"
getrandom = { version = "0.2.10", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
cfg-if = "1.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
